# sans

./: .coverage.sh  .gitignore  .lint.sh  Makefile.am  README.md  configure.ac
contrib/archlinux/: PKGBUILD
contrib/homebrew/: sans.rb
contrib/sample/: sans.conf
contrib/systemd/: sans.service
man/: sans.8
src/: Makefile.am  async_connect.c  async_connect.h  cache.c  cache.h  conf.c  conf.h  db.c  db.h  dname.c  dname.h  dns.c  dns.h  dnsmsg.c  dnsmsg.h  event.c  event.h  global.c  global.h  log.c  log.h  main.c  query.c  query.h  resolv.c  resolv.h  sans.c  sans.h  socks5.c  socks5.h  utils.c  utils.h  win.h
test/: test.py  test1.conf  test2.conf
