AM_CFLAGS = -pipe -fno-strict-aliasing -Wall -W -Wshadow -Wwrite-strings -Wcast-qual

bin_PROGRAMS = sans

sans_SOURCES = \
    main.c \
    async_connect.c cache.c conf.c dns.c dnsmsg.c event.c log.c query.c sans.c utils.c \
    async_connect.h cache.h conf.h dns.h dnsmsg.h event.h log.h query.h sans.h utils.h win.h

sans_SOURCES += resolv.c resolv.h
